--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,6 @@
     "keywords": ["discord", "discordapp", "discorum", "forum", "framework"],
     "homepage": "https://discorum.com",
     "license": "MIT",
-    "support": {
-        "issues": "https://github.com/discorum/framework/issues",
-        "source": "https://github.com/discorum/framework"
-    },
     "authors": [
         {
             "name": "Nicholas Sylke",
@@ -18,20 +14,30 @@
             "email": "rocket0191@gmail.com"
         }
     ],
+    "support": {
+        "issues": "https://github.com/discorum/framework/issues",
+        "source": "https://github.com/discorum/framework"
+    },
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.1",
         "slim/slim": "^3.1",
         "slim/twig-view": "^2.4",
         "illuminate/database": "^5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
             "Discorum\\": "src/Discorum/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "autoload-dev": {
+        "psr-4": {
+            "Discorum\\Tests\\": "tests/Discorum/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    }
 }
