--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@ text eol=lf
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
-phpunit.xml.dist export-ignore
+phpunit.xml export-ignore
 CONTRIBUTING.md export-ignore
 CODE_OF_CONDUCT.md export-ignore
 CHANGELOG.md export-ignore
