--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,27 @@ language: php
 
 sudo: false
 
-matrix:
-    fast_finish: true
-    include:
-        - php: 7.1
-        - php: 7.2
+cache:
+  directories:
+    - $HOME/.composer/cache
+    - $HOME/.npm
 
-before_install:
-    - travis_retry composer self-update
-    - composer install
-    - composer dump-autoload -o
+install:
+  - composer install
 
-script: vendor/bin/phpunit
+script:
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+jobs:
+  include:
+    - php: 7.1
+      env: DB=mysql
+
+    - php: 7.2
+      env: DB=mysql
+
+notifications:
+  email: false
