Update emails in composer

--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "authors": [
         {
             "name": "Nicholas Sylke",
-            "email": "nicksylke@outlook.com"
+            "email": "hello@nsylke.me"
         },
         {
-            "name": "Tyler Richards",
-            "email": "rocket0191@gmail.com"
+            "name": "TJ Richards",
+            "email": "hello@tjr.gg"
         }
     ],
     "support": {
